[CPP]Implemented mergesort Updates in JS/GO/Python

--- a/sort/cpp/Makefile
+++ b/sort/cpp/Makefile
@@ -5,10 +5,15 @@ all: libsort.so main
 
 main: main.cpp
 	$(CXX) $^ --std=c++11 -g -lsort -I./ -L./ -o $@
+
 libsort.so: sort.cpp
 	$(CXX) $^ --std=c++11 -g -fPIC -shared -o $@
+
 clean:
 	rm -f main
 	rm -f libsort.so
 
-.PHONY: all clear
+run: 
+	LD_LIBRARY_PATH="." ./main
+
+.PHONY: all clear run
